--- a/template/data-tool/package.json
+++ b/template/data-tool/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vfs-data-tool-template",
+  "name": "{{name}}",
   "version": "0.0.0",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
